--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
     "name": "kernelpark",
-	"version": "1.0.1",
-	"description": "Kernel park",
-	"type": "module",
-	"license": "MIT",
+    "version": "1.0.1",
+    "description": "Kernel park",
+    "type": "module",
+    "license": "MIT",
     "main": "index.js",
-	"scripts": {
-		"start": "node index.js"
-	}
+    "scripts": {
+        "start": "node index.js"
+    },
+    "dependencies": {
+        "chalk": "^5.4.1"
+    }
 }
